<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_help"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/background"
    tools:context="com.example.keegz_000.question2.Help">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvHelp"
        android:text="@string/help"
        android:textAppearance="@android:style/TextAppearance.Material.Large"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@android:drawable/ic_menu_help"
        android:id="@+id/imvHelp"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/tvHelp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvAdding"
        android:text="@string/adding"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        android:layout_below="@+id/tvMain"
        android:layout_alignParentStart="true"
        android:layout_marginTop="16dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:id="@+id/tvUpdating"
        android:text="@string/updating"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        android:layout_below="@+id/tvAdding"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvUpdating"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="19dp"
        android:id="@+id/tvViewing"
        android:text="@string/viewing"
        android:textAppearance="@android:style/TextAppearance.Material.Medium" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvViewing"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="21dp"
        android:id="@+id/tvDelete"
        android:text="@string/deleting"
        android:textAppearance="@android:style/TextAppearance.Material.Medium" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnBack"
        android:text="@string/back_home"
        android:onClick="Back"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:background="@drawable/btnshape"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvMain"
        android:text="@string/adding_a_value"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        android:layout_below="@+id/imvHelp"
        android:layout_alignParentStart="true" />
</RelativeLayout>
