<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_update_data"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/background"
    tools:context="com.example.keegz_000.question2.UpdateData">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvStudent"
        android:text="@string/student_no"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        android:layout_marginTop="59dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:id="@+id/tvName"
        android:text="@string/name"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        android:layout_below="@+id/edtStudentNumber"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/edtName"
        android:layout_alignBaseline="@+id/tvName"
        android:layout_alignBottom="@+id/tvName"
        android:layout_alignParentEnd="true"
        android:layout_alignStart="@+id/edtSurname" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:id="@+id/tvSurname"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        android:text="@string/student_surname"
        android:layout_below="@+id/edtName"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/edtSurname"
        android:layout_alignBaseline="@+id/tvSurname"
        android:layout_alignBottom="@+id/tvSurname"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/tvSurname" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/edtModule"
        android:layout_alignBaseline="@+id/tvModule"
        android:layout_alignBottom="@+id/tvModule"
        android:layout_alignParentEnd="true"
        android:layout_alignStart="@+id/edtMark" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/edtMark"
        android:layout_alignBaseline="@+id/tvMark"
        android:layout_alignBottom="@+id/tvMark"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/tvSurname" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/edtStudentNumber"
        android:layout_alignBaseline="@+id/tvStudent"
        android:layout_alignBottom="@+id/tvStudent"
        android:layout_toEndOf="@+id/tvMark" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/edtStudentNumber"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="12dp"
        android:id="@+id/tvId"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        android:text="@string/id" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_above="@+id/edtStudentNumber"
        android:layout_alignParentEnd="true"
        android:id="@+id/edtId"
        android:layout_alignStart="@+id/edtName" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvCourse"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        android:text="@string/course_code"
        android:layout_alignBottom="@+id/edtCourse"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/edtCourse"
        android:layout_centerVertical="true"
        android:layout_alignParentEnd="true"
        android:layout_alignStart="@+id/edtSurname" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvModule"
        android:text="@string/module_code"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        android:layout_below="@+id/tvCourse"
        android:layout_alignParentStart="true"
        android:layout_marginTop="29dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvMark"
        android:text="@string/mark_percentage"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        android:layout_below="@+id/edtModule"
        android:layout_toStartOf="@+id/edtMark"
        android:layout_marginTop="19dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/textView"
        android:text="@string/enter_id"
        android:textAppearance="@android:style/TextAppearance.Material.Caption" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnBack"
        android:text="@string/back_home"
        android:onClick="Back"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:background="@drawable/btnshape"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnDelete"
        android:text="@string/update_button"
        android:onClick="updateRecord"
        android:layout_below="@+id/edtMark"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="23dp"
        android:background="@drawable/btnshape"/>

</RelativeLayout>
